[package]
name = "local_crate_a"
version = "0.0.1"
authors = ["Example <opensource@example.com>"]
edition = "2018"
license = "MIT"

[dependencies]
derive_builder = "0.9.0"
lazy_static = "1.4.0"
linked-hash-map = "0.5.3"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
tracing = "0.1.21"
tracing-futures = "0.2.4"

[dev-dependencies]
gherkin_rust = "0.10.0"
